Added web fonts style tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
  <title>Team Miami-Dade County: Midyear Report 2015</title>
+ <link rel="stylesheet" type="text/css" href="//cloud.webtype.com/css/944a7551-9b08-4f0a-8767-e0f83db4a16b.css" />
 
  <link rel="stylesheet" href="https://style.codeforamerica.org/2/style/css/main.css">
  
