Added Miami Foundation

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 			 <h3>Community Partners</h3>
 			 
 			 	<li>The Knight Foundation</li>
+			 	<li>The Miami Foundation</li>
 			 	<li>Code for Miami</li>
 			 	<br>		 	
 			 </article>
