Added Miami DDA as a Community Partner
Code for Miami is not a community partner (funder) so it's been removed.

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 			 
 			 	<li>The Knight Foundation</li>
 			 	<li>The Miami Foundation</li>
-			 	<li>Code for Miami</li>
+			 	<li>Miami Downtown Development Authority</li>
 			 	<br>		 	
 			 </article>
 			 
