--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ After: The User Guide to Short Term Events Permitting in the Miami-Dade Unincorp
 <img src='assets/county-map.png'>
 
 <h3>AgendaBot 305</h3>
-<p>We built an app called <a href='http://twitter.com/agendabot305'>AgendaBot 305</a>, which sends out a tweet out whenever a recording of a public meeting is made available. This app helps address some citizen complaints about lack of transparency around legislation decisions being considered at County Commissioner meetings.</p>
+<p>We built an app called <a href='http://twitter.com/agendabot305'>AgendaBot 305</a>, which sends out a tweet whenever a recording of a public meeting is made available. This app helps address some citizen complaints about lack of transparency around legislation decisions being considered at County Commissioner meetings.</p>
 
 <img src='assets/twitter_305.jpg'>
 
