--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		 <li><a href="#strategy">Strategy &amp; Approach</a></li>
 		 <li><a href="#main">Main Project</a></li>
 		 <li><a href="#other">Other Efforts</a></li>
-					<li><a href="#timeline">The Timeline</a></li>
+		<li><a href="#timeline">The Timeline</a></li>
 		 <li><a href="#next">What's Next</a></li>
 		 </ul>
 		 
@@ -232,7 +232,7 @@ After: The User Guide to Short Term Events Permitting in the Miami-Dade Unincorp
 
 <h3>Am I In Miami and Miami-Dade Census based APIs</h3>
 
-<p>We launched <a href='http://amiinmiami.herokuapp.com/'>Am I In Miami</a>, a spin-off of the Am I In Las Vegas app built by the 2013 Las Vegas Fellowship team. This takes the same concept of helping users understand jurisdictional boundaries by allowing them to enter an address and find out whether they are in UMSA or one of the 34 municipalities in the County.</p>
+<p>We launched <a href='http://amiinmiami.herokuapp.com/'>Am I In Miami</a>, a spin-off of the Am I In Las Vegas app built by the 2013 Las Vegas Fellowship team. This takes the same concept of helping users understand jurisdictional boundaries by allowing them to enter an address and find out whether they are in the Unincorporated Municipal Service Area (UMSA) or one of the 34 municipalities in the County.</p>
 
 <p>The next goal for this project is to map which jurisdiction is responsible for key services for those users. This project is important because approximately 1.2 million people live in unincorporated Miami-Dade, but have Miami city postal addresses, while some municipalities contract out their services to the county. The goal of this project is to help eliminate confusion and help residents understand where to inquire about public services.</p>
 
@@ -243,7 +243,7 @@ After: The User Guide to Short Term Events Permitting in the Miami-Dade Unincorp
 <img src='assets/county-map.png'>
 
 <h3>AgendaBot 305</h3>
-<p>We built an app called <a href='http://twitter.com/agendabot305'>AgendaBot 305</a>, which sends out a tweet out whenever a recording of a public meeting is made available. This app helps address some citizen complaints about lack of transparency around legislation decisions being considered at County Commissioner meetings.</p>
+<p>We built an app called <a href='http://twitter.com/agendabot305'>AgendaBot 305</a>, which sends out a tweet whenever a recording of a public meeting is made available. This app helps address some citizen complaints about lack of transparency around legislation decisions being considered at County Commissioner meetings.</p>
 
 <img src='assets/twitter_305.jpg'>
 
